adds basic realtime chat

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
     <title>LOLBROVILLE</title>
+    <meta name="description" content="A real-time multiplayer platformer with chat.">
     <meta charset="utf-8">
 
     <script src="./js/libs/pubnub.min.js"></script>
