--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <title>LOLBROVILLE</title>
     <meta name="description" content="A real-time multiplayer platformer with chat.">
     <meta charset="utf-8">
-
+    <link rel="shortcut icon" type="image/png" href="./images/turnip.png"/>
     <script src="./js/libs/pubnub.min.js"></script>
     <script src="./js/libs/phaser.min.js"></script>
     <script src="./js/main.js"></script>
